traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:5: error: not found: value writeMessag
  writeMessag(0);
  ^TraversalDiagonal:12: error: value -= is not a member of Int
      y-=1;
       ^